--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "springbokjs-common",
   "description": "SpringbokJS common stuff for browser and server",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "keywords": [
     "springbokjs"
   ],
@@ -14,20 +14,20 @@
   },
   "main": "./lib/index.js",
   "dependencies": {
-    "springbokjs-dom": "^0.9.1",
+    "springbokjs-dom": "^0.10.0",
     "springbokjs-dom-components": "^0.5.0",
     "springbokjs-utils": "^2.0.1",
     "springbokjs-db": "^0.2.0",
-    "socket.io": ">=1.3.5",
+    "socket.io": ">=1.3.5 < 2.0.0",
     "es6like-class": "^0.1.0",
-    "springbokjs-di": "^0.6.0",
+    "springbokjs-di": "^0.7.0",
     "springbokjs-router": "^3.5.0",
     "yielded": "^0.3.1"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
     "mocha": "^2.2.1",
-    "proclaim": "^2.0.0",
-    "springbokjs-library": "^3.5.2"
+    "proclaim": "^3.1.0",
+    "springbokjs-library": "^4.0.1"
   }
 }
