--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   },
   "main": "./lib/index.js",
   "dependencies": {
+    "es6like-class": "^0.2.4",
+    "socket.io": ">=1.3.5 < 2.0.0",
+    "springbokjs-db": "^0.2.3",
+    "springbokjs-di": "^0.9.0",
     "springbokjs-dom": "^0.10.1",
     "springbokjs-dom-components": "^0.5.6",
-    "springbokjs-utils": "^2.0.1",
-    "springbokjs-db": "^0.2.3",
-    "socket.io": ">=1.3.5 < 2.0.0",
-    "es6like-class": "^0.2.4",
-    "springbokjs-di": "^0.9.0",
+    "springbokjs-models": "^0.5.0",
     "springbokjs-router": "^3.5.0",
+    "springbokjs-utils": "^2.0.1",
     "yielded": "^0.3.1"
   },
   "devDependencies": {
